--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         justify-content: center;
         align-items: center;
         min-height: 100vh;
+        user-select: none;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
       }
 
       #start-container,
@@ -77,9 +81,18 @@
   </head>
   <body>
     <div id="start-container">
+      <h2>Exam Information</h2>
+      <p>Exam ID: <span id="examId"></span></p>
+      <p>Exam Subject: <span id="examSubject"></span></p>
+      <p>Exam Chapter: <span id="examChapter"></span></p>
+      <p>Exam Start Time: <span id="examStartTimeDisplay"></span></p>
+      <p>Exam Duration: <span id="examDurationDisplay"></span></p>
       <h2>Enter Your Username to Start Exam</h2>
       <input type="text" id="username" placeholder="Your Username" />
-      <button onclick="startExam()">Start Exam</button>
+      <p id="startTime"></p>
+      <button id="startButton" disabled onclick="startExam()">
+        Start Exam
+      </button>
     </div>
 
     <div id="exam-container">
@@ -102,39 +115,39 @@
       const questions = [
         {
           question:
-            "A shopkeeper sold an article for Rs. 840 after allowing a discount of 16\% on the marked price. What was the marked price of the article?",
+            "A shopkeeper sold an article for Rs. 840 after allowing a discount of 16% on the marked price. What was the marked price of the article?",
           options: ["Rs. 960", "Rs. 1000", "Rs. 1040", "Rs. 1120", "Rs. 1200"],
           answer: "Rs. 1000",
         },
         {
           question:
-            "A man sold two articles for Rs. 99 each. On one he gains 10\% and on the other he loses 10\%. What is his overall gain or loss percentage?",
+            "A man sold two articles for Rs. 99 each. On one he gains 10% and on the other he loses 10%. What is his overall gain or loss percentage?",
           options: [
-            "1\% gain",
-            "1\% loss",
+            "1% gain",
+            "1% loss",
             "No gain, no loss",
-            "2\% gain",
-            "2\% loss",
+            "2% gain",
+            "2% loss",
           ],
-          answer: "1\% loss",
+          answer: "1% loss",
         },
         {
           question:
-            "By selling a chair for Rs. 572, a man gains 30\%. What was the cost price of the chair?",
+            "By selling a chair for Rs. 572, a man gains 30%. What was the cost price of the chair?",
           options: ["Rs. 400", "Rs. 420", "Rs. 440", "Rs. 460", "Rs. 480"],
           answer: "Rs. 440",
         },
         {
           question:
-            "A trader marks his goods 40\% above the cost price and allows a discount of 20\%. What is his gain percentage?",
-          options: ["10\%", "12\%", "15\%", "18\%", "20\%"],
-          answer: "12\%",
+            "A trader marks his goods 40% above the cost price and allows a discount of 20%. What is his gain percentage?",
+          options: ["10%", "12%", "15%", "18%", "20%"],
+          answer: "12%",
         },
         {
           question:
             "A fruit seller buys oranges at 11 for Rs. 10 and sells them at 10 for Rs. 11. What is his gain percentage?",
-          options: ["19\%", "20\%", "21\%", "22\%", "23\%"],
-          answer: "21\%",
+          options: ["19%", "20%", "21%", "22%", "23%"],
+          answer: "21%",
         },
       ];
 
@@ -145,11 +158,70 @@
       let answers = [];
       let username;
 
+      const examId = "SBI_CLERK_2025_001";
+      const examSubject = "Quantitative Aptitude";
+      const examChapter = "Profit and Loss";
+      const examStartTime = new Date("April 9, 2025 15:34:00");
+      const examDuration = 5 * 60 * 1000; // 5 minutes in milliseconds
+      const examEndTime = new Date(examStartTime.getTime() + examDuration);
+
+      document.getElementById("examId").textContent = examId;
+      document.getElementById("examSubject").textContent = examSubject;
+      document.getElementById("examChapter").textContent = examChapter;
+      document.getElementById("examStartTimeDisplay").textContent =
+        examStartTime.toLocaleString();
+      document.getElementById("examDurationDisplay").textContent = "5 minutes";
+
+      function checkStartTime() {
+        const now = new Date();
+        const timeDiff = examStartTime - now;
+        const endTimeDiff = examEndTime - now;
+
+        if (endTimeDiff <= 0) {
+          document.getElementById("startButton").disabled = true;
+          document.getElementById("startTime").textContent = "Exam has ended.";
+          clearInterval(timeCheckInterval);
+          return;
+        }
+
+        if (timeDiff <= 0) {
+          document.getElementById("startButton").disabled = false;
+          document.getElementById("startTime").textContent =
+            "Exam Started! Click the button to begin. Exam Duration : 5 Minutes.";
+        } else {
+          const minutes = Math.floor(timeDiff / (1000 * 60));
+          const seconds = Math.floor((timeDiff % (1000 * 60)) / 1000);
+          document.getElementById(
+            "startTime"
+          ).textContent = `Exam will start in ${minutes}m ${seconds}s. Exam Duration : 5 Minutes.`;
+        }
+      }
+
+      const timeCheckInterval = setInterval(checkStartTime, 1000);
+      checkStartTime(); // Initial check
+
+      function startExam() {
+        const now = new Date();
+        if (now > examEndTime) {
+          alert("Exam has ended.");
+          return;
+        }
+      }
+
       function startExam() {
         username = document.getElementById("username").value;
         if (
           !username ||
-          !["bhagirath5676@", "hirva7776#", "roy56464@"].includes(username)
+          ![
+            "bhagirath5676@",
+            "hirva7776#",
+            "roy56464@",
+            "dfds",
+            "fsfd",
+            "aa",
+            "bb",
+            "cc",
+          ].includes(username)
         ) {
           alert("Please enter a valid username.");
           return;
@@ -160,6 +232,11 @@
           );
           return;
         }
+
+        document.documentElement.requestFullscreen().catch((err) => {
+          console.error(`Fullscreen request failed: ${err.message}`);
+        });
+
         document.getElementById("start-container").style.display = "none";
         document.getElementById("exam-container").style.display = "block";
         loadQuestion();
@@ -234,7 +311,32 @@
         document.getElementById("resultName").textContent = username;
         document.getElementById("score").textContent = score;
         localStorage.setItem(username, JSON.stringify(answers));
+        document.exitFullscreen();
       }
+
+      document.addEventListener("visibilitychange", () => {
+        if (document.visibilityState === "hidden") {
+          alert("Browser switching is not allowed during the exam.");
+          window.location.reload();
+        }
+      });
+
+      document.addEventListener("contextmenu", (e) => {
+        e.preventDefault();
+      });
+
+      document.addEventListener("keydown", (e) => {
+        if (
+          e.ctrlKey &&
+          (e.key === "c" ||
+            e.key === "v" ||
+            e.key === "x" ||
+            e.key === "u" ||
+            e.key === "s")
+        ) {
+          e.preventDefault();
+        }
+      });
     </script>
   </body>
 </html>
