--- a/app.html
+++ b/app.html
@@ -8,80 +8,126 @@
     />
 
     <style>
-      body {
-        font-family: "Arial", sans-serif;
-        background-color: #f4f4f4;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        user-select: none;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
+            body {
+              font-family: "Arial", sans-serif;
+              background-color: #f4f4f4;
+              margin: 0;
+              padding: 0;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              min-height: 100vh;
+              user-select: none;
+              -webkit-user-select: none;
+              -moz-user-select: none;
+              -ms-user-select: none;
+            }
+
+            #start-container,
+            #exam-container,
+            #result-container {
+              background-color: white;
+              padding: 20px;
+              border-radius: 8px;
+              box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+              width: 80%;
+              max-width: 600px;
+              text-align: center;
+            }
+
+            #exam-container,
+            #result-container {
+              display: none;
+            }
+
+            input[type="text"] {
+              padding: 10px;
+              margin: 10px 0;
+              width: calc(100% - 22px);
+              border: 1px solid #ddd;
+              border-radius: 4px;
+            }
+
+            button {
+              background-color: #007bff;
+              color: white;
+              padding: 10px 20px;
+              border: none;
+              border-radius: 4px;
+              cursor: pointer;
+              margin: 10px;
+            }
+
+            button:hover {
+              background-color: #0056b3;
+            }
+
+            #options label {
+              display: block;
+              margin: 10px 0;
+              text-align: left;
+            }
+
+            #timer {
+              font-weight: bold;
+              color: #d9534f;
+            }
+
+            #question {
+              margin-bottom: 20px;
+            }
+
+            .button-container {
+              display: flex;
+              justify-content: space-between;
+              margin-top: 20px;
+            }
+
+            #palette {
+          position: fixed;
+          top: 20px;
+          right: 20px;
+          background-color: white;
+          padding: 10px;
+          border-radius: 8px;
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+          width: 200px;
+          display: none; /* Initially hide palette */
       }
 
-      #start-container,
-      #exam-container,
-      #result-container {
-        background-color: white;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        width: 80%;
-        max-width: 600px;
-        text-align: center;
+      #palette button {
+          width: 30px;
+          height: 30px;
+          margin: 5px;
+          border-radius: 50%;
+          border: none;
+          cursor: pointer;
+          background-color: lightgray; /* Default: Not visited */
       }
 
-      #exam-container,
-      #result-container {
-        display: none;
+      .visited {
+          background-color: red; /* Visited but no answer */
       }
 
-      input[type="text"] {
-        padding: 10px;
-        margin: 10px 0;
-        width: calc(100% - 22px);
-        border: 1px solid #ddd;
-        border-radius: 4px;
+      .attempted {
+          background-color: green; /* Visited and answered */
       }
 
-      button {
-        background-color: #007bff;
-        color: white;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        margin: 10px;
+      .marked {
+          background-color: blue; /* Visited and marked for review */
+          position: relative; /* Needed for tick mark */
       }
 
-      button:hover {
-        background-color: #0056b3;
+      .marked::after {
+          content: '✓'; /* Tick mark */
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          color: blueviolet; /* Tick mark color */
+          font-size: 16px;
       }
-
-      #options label {
-        display: block;
-        margin: 10px 0;
-        text-align: left;
-      }
-
-      #timer {
-        font-weight: bold;
-        color: #d9534f;
-      }
-
-      #question {
-        margin-bottom: 20px;
-      }
-
-      .button-container {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 20px;
-      }
+            }
     </style>
   </head>
   <body>
@@ -105,9 +151,15 @@
       <div id="options"></div>
       <div class="button-container">
         <button id="prevBtn" onclick="prevQuestion()" disabled>Previous</button>
-        <button id="submitBtn" onclick="submitAnswer()">Submit</button>
+        <button id="markBtn" onclick="markForReview()">Mark for Review</button>
+        <button id="submitBtn" onclick="submitAnswer()">Save and Next</button>
       </div>
       <p>Time Remaining: <span id="timer"></span></p>
+    </div>
+
+    <div id="palette">
+      <h3>Question Palette</h3>
+      <div id="paletteButtons"></div>
     </div>
 
     <div id="result-container">
